--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^6.0.0-beta.0",
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
-    "vue-dayjs": "^1.0.2",
-    "vue-fragment": "^1.5.2",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
